add task, remove task features added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
                     <%=task.item %>
                     <%=task.dateOfCreation %>
                     <div>
-                        <a href="/removetask/?currItem=<%task.item%>">
+                        <a href="/removetask/?currItem=<%=task.item%>">
                             <i class="fas fa-trash-alt"></i>
                         </a>
                     </div>
